cluster/rook-ceph/monitoring/prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    prometheus: rook-prometheus
  name: rook-prometheus
  namespace: rook-ceph
spec:
  ports:
  - name: web
    port: 9090
    targetPort: web
  selector:
    app: prometheus
    prometheus: rook-prometheus
  sessionAffinity: ClientIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rook-prometheus
  namespace: rook-ceph
  annotations:
    cert-manager.io/cluster-issuer: internal
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - rook-prometheus.k8s.grigri
    secretName: rook-prometheus-tls
  rules:
  - host: rook-prometheus.k8s.grigri
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rook-prometheus
            port:
              name: web
